--- a/module-4/index.html
+++ b/module-4/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Coursera Module 4</title>
-    <script src="SayHello.js"></script>
-    <script src="SayGoodBye.js"></script>
+    <script src="Sayhello.js"></script>
+    <script src="Saygoodbye.js"></script>
     <script src="script.js"></script>
 </head>
 
